/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option csharp_namespace = "Energinet.DataHub.MarketParticipant.Infrastructure.Model.Contracts";

enum EicFunction {
  /*
   * Unspecified is unused but according to best practice.
   * Read more at https://protobuf.dev/programming-guides/style/#enums.
   */
  EIC_FUNCTION_UNSPECIFIED = 0;
  EIC_FUNCTION_GRID_ACCESS_PROVIDER = 1;
  EIC_FUNCTION_BALANCE_RESPONSIBLE_PARTY = 2;
  EIC_FUNCTION_BILLING_AGENT = 3;
  EIC_FUNCTION_ENERGY_SUPPLIER = 4;
  EIC_FUNCTION_IMBALANCE_SETTLEMENT_RESPONSIBLE = 5;
  EIC_FUNCTION_METERED_DATA_ADMINISTRATOR = 6;
  EIC_FUNCTION_METERED_DATA_RESPONSIBLE = 7;
  EIC_FUNCTION_METERING_POINT_ADMINISTRATOR = 8;
  EIC_FUNCTION_SYSTEM_OPERATOR = 9;
  EIC_FUNCTION_DANISH_ENERGY_AGENCY = 10;
  EIC_FUNCTION_DATAHUB_ADMINISTRATOR = 11;
  EIC_FUNCTION_INDEPENDENT_AGGREGATOR = 12;
  EIC_FUNCTION_SERIAL_ENERGY_TRADER = 13;
  EIC_FUNCTION_METER_OPERATOR = 14;
  EIC_FUNCTION_DELEGATED = 15;
  EIC_FUNCTION_IT_SUPPLIER = 16;
}